Mark test methods with given, when and then commentaries