@@ -2,7 +2,6 @@ package com.sii.collection_boxes.service;
 
 import com.sii.collection_boxes.dto.CreateEventDTO;
 import com.sii.collection_boxes.dto.FinancialReportDTO;
-import com.sii.collection_boxes.entity.CollectionBox;
 import com.sii.collection_boxes.entity.Event;
 import com.sii.collection_boxes.exceptions.EventNameTakenException;
 import com.sii.collection_boxes.exceptions.UnsupportedCurrencyException;
@@ -14,13 +13,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 
-import static org.assertj.core.api.AssertionsForClassTypes.tuple;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.Optional;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -38,10 +35,12 @@ public class EventServiceTest {
 
     @Test
     void createEvent_savesNewEvent() {
+        // given
         CreateEventDTO dto = new CreateEventDTO("Redcross", "EUR");
         when(eventRepository.existsByName("Redcross")).thenReturn(false);
+        // when
         eventService.createEvent(dto);
-
+        // then
         verify(eventRepository).save(argThat(event ->
                 "Redcross".equals(event.getName()) &&
                         "EUR".equals(event.getCurrency()) &&
@@ -51,11 +50,14 @@ public class EventServiceTest {
 
     @Test
     void createEvent_throws404whenNameTaken(){
+        // given
         when(eventRepository.existsByName("Redcross")).thenReturn(true);
+        // when
         EventNameTakenException ex = assertThrows(
                 EventNameTakenException.class,
                 () -> eventService.createEvent(new CreateEventDTO("Redcross", "EUR"))
         );
+        // then
         assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(ex.getReason()).isEqualTo("Name Redcross is already taken");
         verify(eventRepository, never()).save(any());
@@ -63,11 +65,14 @@ public class EventServiceTest {
 
     @Test
     void createEvent_throws404whenUnsupportedCurrency(){
+        // given
         when(eventRepository.existsByName("Redcross")).thenReturn(false);
+        // when
         UnsupportedCurrencyException ex = assertThrows(
                 UnsupportedCurrencyException.class,
                 () -> eventService.createEvent(new CreateEventDTO("Redcross", "GBP"))
         );
+        // then
         assertThat(ex.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(ex.getReason()).isEqualTo("Unsupported currency: GBP");
         verify(eventRepository, never()).save(any());
@@ -75,18 +80,18 @@ public class EventServiceTest {
 
     @Test
     void displayReport_mapEventsToDtos(){
+        // given
         Event event1 = new Event("CharityRun", "EUR");
         event1.addToBalance(BigDecimal.valueOf(123.45));
         Event event2 = new Event("FoodDrive", "USD");
         event2.addToBalance(BigDecimal.valueOf(50));
-
         when(eventRepository.findAll()).thenReturn(List.of(event1, event2));
-
+        // when
         List<FinancialReportDTO> report = eventService.displayReport();
+        // then
+        assertEquals(2, report.size());
 
-        assertEquals(2, report.size(), "should return two entries");
-
-        FinancialReportDTO first = report.get(0);
+        FinancialReportDTO first = report.getFirst();
         assertEquals("CharityRun", first.eventName());
         assertEquals(BigDecimal.valueOf(123.45), first.balance());
         assertEquals("EUR", first.currency());
